# algorithm

./: .envrc  .formatter.exs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  algorithm.code-workspace  flake.nix  package-lock.json  package.json  pyproject.toml  shell.nix  update.sh  vcpkg.json
.devcontainer/: devcontainer.json
adventofcode2015/: CMakeLists.txt  shell.nix
adventofcode2015/src/: CMakeLists.txt  doesn_t_he_have_intern_elves_for_this.cc  doesn_t_he_have_intern_elves_for_this_part_two.cc  i_was_told_there_would_be_no_math.cc  i_was_told_there_would_be_no_math_part_two.cc  not_quite_lisp.cc  not_quite_lisp2.cc  not_quite_lisp_part_two.cc  perfectly_spherical_houses_in_a_vacuum.cc  perfectly_spherical_houses_in_a_vacuum_part_two.cc  probably_a_fire_hazard.cc  the_ideal_stocking_stuffer.cc  the_ideal_stocking_stuffer_part_two.cc
adventofcode2019/: adventofcode2019.opam  bsconfig.json  dune-project  package-lock.json  package.json  shell.nix
adventofcode2019/lib/: day_two__step_one.ml  dune
adventofcode2019/src/: day_one__step_one.bs.js  day_one__step_two.bs.js  day_one__step_two.ml  day_two__step_one.bs.js
algorithm-beam/: .envrc  (+1 more)
algorithm-cc/src/: CMakeLists.txt
algorithm-cc/src/adventofcode2015/: CMakeLists.txt  doesn_t_he_have_intern_elves_for_this.cc  doesn_t_he_have_intern_elves_for_this_part_two.cc  not_quite_lisp.cc  perfectly_spherical_houses_in_a_vacuum.cc  perfectly_spherical_houses_in_a_vacuum_part_two.cc  probably_a_fire_hazard.cc  probably_a_fire_hazard_part_two.cc  some_assembly_required.cc  the_ideal_stocking_stuffer_part_two.cc
algorithm-cc/src/adventofcode2022/: CMakeLists.txt  calorie_counting_part_two.cc  rock_paper_scissors.cc  rock_paper_scissors_part_two.cc  rucksack_reorganization.cc
algorithm-cc/src/adventofcode2023/: CMakeLists.txt  cube_conundrum.cc  cube_conundrum.cc   trebuchet.cc  trebuchet_part_two.cc
algorithm-cc/src/leetcode/: binary_tree_level_order_traversal.h  binary_tree_right_side_view.h  count_good_nodes_in_binary_tree.h  count_good_nodes_in_binary_tree_test.cc  kth_smallest_element_in_a_bst.h  kth_smallest_element_in_a_bst_test.cc  lowest_common_ancestor_of_a_binary_search_test.cc  subtree_of_another_tree_test.cc  validate_binary_search_tree_test.cc
algorithm-cpp/src/adventofcode2022/: CMakeLists.txt  calorie_counting.cc  calorie_counting_part_two.cc  rock_paper_scissors.cc  rock_paper_scissors_part_two.cc  rucksack_reorganization.cc
algorithm-ocaml/: .envrc  .gitignore  README.md  algorithm.opam  dune-project
algorithm-ocaml/lib/: dune
algorithm-ocaml/lib/adventofcode2019/: day_one_step_one.ml
algorithm-ocaml/test/: dune
algorithm-python/: .envrc  .gitignore  .pdm-python  README.md  pyproject.toml
algorithm-python/algorithm/hackerrank/: fizzbuzz.py
algorithm-python/algorithm/leetcode/: diameter_of_binary_tree_test.py  invert_binary_tree_test.py  is_subsequence.py  isomorphic_strings.py  linked_list_cycle_ii_test.py  longest_consecutive_sequence.py  max_area.py  maximum_depth_of_binary_tree_test.py  min_stack.py  pivot_index.py  pivot_index_test.py  running_sum_of_1_d_array.py  three_sum.py  three_sum_test.py  trapping_rain_water.py
algorithm-python/algorithm/scripts/: generate.py
algorithm-python/algorithm/templates/leetcode/: source.py.jinja2  test.py.jinja2
algorithm-python/src/algorithm/: __init__.py
algorithm-python/src/algorithm/leetcode/: balanced_binary_tree_test.py  best_time_to_buy_and_sell_stock_test.py  binary_search.py  contains_duplicate.py  contains_duplicate_test.py  diameter_of_binary_tree.py  diameter_of_binary_tree_test.py  evaluate_reverse_polish_notation.py  evaluate_reverse_polish_notation_test.py  is_subsequence_test.py  isomorphic_strings.py  isomorphic_strings_test.py  linked_list_cycle_ii.py  linked_list_cycle_ii_test.py  longest_consecutive_sequence.py  longest_consecutive_sequence_test.py  max_area.py  max_area_test.py  maximum_depth_of_binary_tree.py  maximum_depth_of_binary_tree_test.py  merge_two_sorted_lists.py  merge_two_sorted_lists_test.py  middle_of_the_linked_list.py  middle_of_the_linked_list_test.py  min_stack_test.py  pivot_index.py  pivot_index_test.py  product_of_array_except_self.py  product_of_array_except_self_test.py  reorder_list.py  reverse_linked_list_test.py  running_sum_of_1_d_array_test.py  three_sum_test.py  top_k_frequent_elements.py  top_k_frequent_elements_test.py  trapping_rain_water_test.py  two_sum_2.py  two_sum_2_test.py  valid_anagram.py  valid_anagram_test.py  (+5 more)
leetcode/: CMakeLists.txt  best_time_to_buy_and_sell_stock.py  binary_search.py  binary_search_test.py  binary_tree_level_order_traversal.h  binary_tree_level_order_traversal_test.cc  binary_tree_right_side_view.h  binary_tree_right_side_view_test.cc  contains_duplicate.py  count_good_nodes_in_binary_tree.h  group_anagrams.py  group_anagrams_test.py  invert_binary_tree_test.py  kth_smallest_element_in_a_bst.h  kth_smallest_element_in_a_bst_test.cc  lowest_common_ancestor_of_a_binary_search.cc  lowest_common_ancestor_of_a_binary_search.h  lowest_common_ancestor_of_a_binary_search_test.cc  min_stack.py  product_of_array_except_self.py  reorder_list.exs  reorder_list_test.py  reverse_linked_list.py  same_tree.cc  same_tree.h  same_tree_test.cc  subtree_of_another_tree.cc  subtree_of_another_tree.h  subtree_of_another_tree_test.cc  test_best_time_to_buy_and_sell_stock.py  test_contains_duplicate.py  test_group_anagrams.py  test_min_stack.py  test_product_of_array_except_self.py  test_top_k_frequent_elements.py  test_two_sum.py  test_valid_anagram.py  test_valid_palindrome.py  test_valid_parentheses.py  top_k_frequent_elements.py  (+6 more)
leetcode/cpp/: CMakeLists.txt
leetcode/cpp/src/: CMakeLists.txt  count_good_nodes_in_binary_tree_test.cc  same_tree_test.cc  validate_binary_search_tree_test.cc
leetcode/python/: pyproject.toml
leetcode/python/leetcode/: balanced_binary_tree.py  best_time_to_buy_and_sell_stock.py  contains_duplicate.py  contains_duplicate_test.py  invert_binary_tree.py  min_stack_test.py  valid_palindrome_test.py
(+213 files in other folders)
