[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = "Shikanime's algorithms sketchbook"
authors = ["Shikanime Deva <shikanime.deva@shikanime.studio>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
