cmake_minimum_required(VERSION 3.10)
project (adventofcode2015)

add_executable(not_quite_lisp src/not_quite_lisp.cc)
set_property(TARGET not_quite_lisp PROPERTY CXX_STANDARD 20)

add_executable(not_quite_lisp_part_two src/not_quite_lisp_part_two.cc)
set_property(TARGET not_quite_lisp_part_two PROPERTY CXX_STANDARD 20)

add_executable(i_was_told_there_would_be_no_math src/i_was_told_there_would_be_no_math.cc)
set_property(TARGET i_was_told_there_would_be_no_math PROPERTY CXX_STANDARD 20)

add_executable(i_was_told_there_would_be_no_math_part_two src/i_was_told_there_would_be_no_math_part_two.cc)
set_property(TARGET i_was_told_there_would_be_no_math_part_two PROPERTY CXX_STANDARD 20)

add_executable(perfectly_spherical_houses_in_a_vacuum src/perfectly_spherical_houses_in_a_vacuum.cc)
set_property(TARGET perfectly_spherical_houses_in_a_vacuum PROPERTY CXX_STANDARD 20)
