(lang dune 3.4)

(name adventofcode2019)

(generate_opam_files true)

(source
 (github shikanime/algorithm))

(authors "William Phetsinorath")

(maintainers "William Phetsinorath")

(license AGPL-3.0-or-later)

(package
 (name adventofcode2019)
 (synopsis "Adventure of Code 2019 solutions")
 (description "Advent of Code 2019 solutions")
 (depends ocaml dune)
 (tags
  (algorithm adventofcode2019)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
