[tool.poetry]
name = "algorithm"
version = "0.1.0"
description = "Shikanime's algorithms sketchbook"
authors = ["William Phetsinorath <william.phetsinorath@shikanime.studio>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "algorithm"}]

[tool.poetry.dependencies]
python = "~3.10"
Jinja2 = "^3.1.3"
jinja2-strcase = "^0.0.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
