[project]
name = "algorithm"
version = "0.1.0"
description = "Shikanime's algorithms sketchbook"
authors = [
    {name = "William Phetsinorath", email = "william.phetsinorath@shikanime.studio"},
]
dependencies = [
    "Jinja2<4.0.0,>=3.1.2",
    "jinja2-strcase<1.0.0,>=0.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest<8.0.0,>=7.1.3",
    "black<23.0.0,>=22.10.0",
    "isort>=5.13.2",
]

[tool.pdm.scripts]
test = "pytest"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
