[project]
name = "algorithm"
version = "0.1.0"
description = "Shikanime's algorithms sketchbook"
authors = [
  { name = "William Phetsinorath", email = "william.phetsinorath@shikanime.studio" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["jinja2>=3.1.5", "jinja2-strcase>=0.0.2"]

[dependency-groups]
dev = ["pytest>=8.3.4"]
