option(USE_ADVENTOFCODE2015 "Build Advent of Code 2015" ON)
option(USE_ADVENTOFCODE2022 "Build Advent of Code 2022" ON)
option(USE_LEETCODE "Build Leetcode" ON)

if(USE_ADVENTOFCODE2015)
  add_subdirectory(adventofcode2015)
endif()
if(USE_ADVENTOFCODE2022)
  add_subdirectory(adventofcode2022)
endif()
if(USE_LEETCODE)
  add_subdirectory(leetcode)
endif()
