[tool.poetry]
name = "leetcode"
description = "Leetcode solutions"
authors = ["William Phetsinorath <william.phetsinorath@shikanime.studio>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "leetcode"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
